# drf_curs

./: .env.sample  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
config/: settings.py  urls.py
habits/: models.py  pagination.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py
users/: urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
