[tool.poetry]
name = "pythonproject1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "4.2.2"
djangorestframework = "^3.15.2"
psycopg2 = "^2.9.10"
python-dotenv = "^1.0.1"
black = "^24.10.0"
djangorestframework-simplejwt = "^5.3.1"
redis = "^5.2.1"
celery = "^5.4.0"
django-celery-beat = "^2.7.0"
drf-yasg = "^1.21.8"
flake8 = "^7.1.1"
django-cors-headers = "^4.6.0"
coverage = "^7.6.9"
setuptools = "^75.6.0"
pytz = "^2024.2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
